--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -17,115 +17,209 @@
 //   .status_tag { background: #6090DB; }
 
 
+//××××××××××××××××××××××××××××××××××××××××××××××××××××
 
-.section > h3, .panel > h3{
-    background-color: #ff3e3e;
-    /* background-image: linear-gradient(180deg, #efefef, #dfe1e2); */
-    /* text-shadow: #fff 0 1px 0; */
-    /* border: solid 1px #cdcdcd; */
-    border-color: none !important;
-    border-top-color: none !important;
-    border-right-color: none !important;
-    border-bottom-color: none !important;
-    border-left-color: none !important;
-    color: red;
-}
 /*ajustage du front admin login*/
-body.logged_out h2{
-    background: #111 ;
-    background-image: none;
-    height: 50px;
-}
+// login admin-----------------------------
+
 #wrapper {
     width: 100%;
-    height: 100%;
+    height: 150%;
     background: red;
     background: url(images/zz.jpg) no-repeat fixed;
     background-size: cover;
     position: absolute;
 }
-body.logged_out #content_wrapper #active_admin_content {
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
-    background: #aaa;
-    padding: 13px 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -moz-transform: translate3d(-50%, -50%, 0);
-    -ms-transform: translate3d(-50%, -50%, 0);
-    -webkit-transform: translate3d(-50%, -50%, 0);
-    transform: translate3d(-50%, -50%, 0);
-
-    width: 500px;
-    height: 350px;
-    margin: 0px;
-    padding: 30px;
+body.logged_out h2{
+    background: #232322 ;
+    background-image: none;
+    //    height: 50px;
+    color: #fff;
+    padding: 20px;
+    text-shadow: none;
+    font-size: 20px;
+    font-weight: lighter;
 }
-
-//les barres××××××××××××××××××××××××××××××××××××××××××××××××××
-form input[type=text], form input[type=password], form input[type=email], form input[type=number], form input[type=url], form input[type=tel], form input[type=date], form input[type=time], form textarea {
-    width: 86% !important;
+body.logged_out #content_wrapper #active_admin_content {
+    box-shadow: none;
+    background: rgba(129, 129, 129, 0.54);
+    padding: none;
+}
+form input[type=text], form input[type=password], form input[type=password]:active, form input[type=email], form input[type=email]:active, form input[type=number], form input[type=number]:active, form input[type=url], form input[type=url]:active, form input[type=tel], form input[type=tel]:active, form input[type=date], form input[type=date]:active, form input[type=time], form input[type=time]:active, form input[type=text]:active, form textarea {
+    width: calc(80% - 22px);
+    border: 1px solid #c9d0d6;
     border-radius: 0;
+    font-size: 0.95em;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     outline: none;
-
-    height: 20px;
-    font-size: 15px;
-    padding: 15px 35px;
-    margin-bottom: 15px;
-    margin-left: 0px;
-    margin-left: 0px;
-    box-shadow: none !important;
-    border: 1px solid #e0e0e0 !important;
+    padding: 8px 10px 7px;
+    box-shadow: none;
+    background: rgba(170, 170, 170, 0.42);
 }
-
+form fieldset ol > li label {
+    display: block;
+    width: 20%;
+    float: left;
+    font-size: 15px;
+    font-weight: bold;
+    color: #ced4d9;
+}
+form fieldset ol > li label abbr {
+    border: none;
+    color: transparent;
+}
+a, a:link, a:visited {
+    color: #ccc;
+    text-decoration: none;
+}
 a.button, a:link.button, a:visited.button, input[type=submit], input[type=button], button {
+    border-radius: 0px !important;
+    display: inline-block;
+    font-weight: normal;
+    font-size: 1.0em;
     line-height: 12px;
     margin-right: 3px;
-    padding: 15px 30px !important;
-    text-decoration: none;
-    background: #e8206b !important;
+    padding: 7px 16px 6px;
+    text-decoration: none !important;
     background-color: none !important;
     background-image: none !important;
     text-shadow: none !important;
     box-shadow: none !important;
     border: none !important;
-   
-    color: #fff;
-    margin-top: -19px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: 5px;
-    -moz-border-radius: 2px !important;
-    -webkit-border-radius: 2px !important;
-    border-radius: 2px !important;
-    display: inline-block;
-    text-transform: uppercase;
+    color: #efefef !important;
+    background: #eb428a !important;
+    letter-spacing: 5px !important;
+    text-transform: uppercase !important;
+}
+// fin login admin-----------------------------
+//dashboard------------------------------------------
+#title_bar {
+    background-color: #655757 !important;
+    background-image: none !important;
+    text-shadow: none !important;
+    border: none !important;
+    box-shadow: none !important;
+    color: #ddd !important;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+    color: #bbc1c6;
+}
+#header {
+    position: relative;
+}
+#header {
+    background-color: #6a7176;
+    background-image: none !important;
+    border-bottom: none !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+}
+table.index_table tr.selected td {
+    background: rgba(217, 228, 236, 0.19) !important;
+}
+body {
+    color: #bec1c3 !important;
+}
+table.index_table th {
+    background-color: rgba(255, 255, 255, 0.24);
+    background-image: none !important;
+    text-shadow: none !important;
+    border: none !important;
+    box-shadow: none !important;
+    font-size: 1em;
+    font-weight: lighter;
+    color: #fff !important;
+    border: none !important;
+}
+table.index_table th a, table.index_table th a:link, table.index_table th a:visited {
+    color: #fff !important;
+}
+table.index_table th.sorted-asc, table.index_table th.sorted-desc {
+    background-color: none !important;
+    background-color: rgba(255, 255, 255, 0.24);
+}
+a.table_tools_button, .table_tools .dropdown_menu_button {
+    border-radius: 0px !important;
+    font-weight: normal !important;
+    font-size: 1.0em;
+    line-height: 12px;
+    background-image: none !important;
+    box-shadow: none !important;
+    border: 1px solid #666 !important ;
+    text-shadow: none !important;
+    color: #ccc !important;
+    background-color: none !important;
+    background: #333 !important;
 }
 
-form fieldset > ol > li.boolean label input {
-    left: -23px !important;
-    bottom: 3px !important;
-    position: absolute;
-}
-form fieldset > ol > li.boolean label {
-    position: absolute;
-    left: 208px;
-    bottom: 28px;
-    width: 78px;
-    margin-left: -20px;
-    padding: 0px;
-}
-#title_bar {
-    background-color: #2d2828;
-    background-image: none;
-    text-shadow: none;
-    border: none;
+.section > h3, .panel > h3 {
+    text-shadow: none !important;
+    background-color: none !important;
+    background-image: none !important;
+    border: none !important;
+    border: none !important;
     box-shadow: none !important;
-    box-sizing: border-box;
-    position: relative;
-    padding: 10px 30px;
-    z-index: 800;
-    top: 30px;
+    color: #5E6469;
+    background: #30302f !important;
+    height: 40px !important;
+    line-height: 39px !important;
+    font-size: 15px;
+    padding-left: 15px;
 }
+.section, .panel {
+    background: rgba(186, 186, 186, 0.1) !important;
+    border-radius: 0px !important;
+    box-shadow: none !important;
+    margin-bottom: 20px !important;
+}
+.sidebar_section label {
+    color: #aeb4b9;
+}
+form.filter_form a.clear_filters_btn {
+    border-radius: 0px !important;
+    background-color: none !important;
+    background-image: none !important;
+    box-shadow: none !important;
+    border: none !important;
+    text-shadow: none !important;
+    color: #e85e8e !important;
+
+    margin-left: 10px !important;
+    padding: 6px 23px;
+}
+
+
+a.button, a:link.button, a:visited.button, input[type=submit], input[type=button], button {
+    padding: 7px 22px !important;
+    margin: 0 !important;
+}
+
+.panel_contents table th {
+    color: #a3bfd6;
+    box-shadow: none;
+    text-shadow: none !important;
+    border-bottom: 1px solid #ccc;
+}
+form input[type=text], form input[type=password], form input[type=password]:active, form input[type=email], form input[type=email]:active, form input[type=number], form input[type=number]:active, form input[type=url], form input[type=url]:active, form input[type=tel], form input[type=tel]:active, form input[type=date], form input[type=date]:active, form input[type=time], form input[type=time]:active, form input[type=text]:active, form textarea {
+    border: none !important; 
+    border-radius: 0 !important;
+    font-size: 15px !important;
+    color: #fff !important;
+    background: rgba(255, 249, 249, 0.49) !important;
+}
+
+#title_bar .action_items span.action_item > a, #title_bar .action_items span.action_item > .dropdown_menu > a {
+    border-radius: 0px !important;
+    background-color: none !important;
+    background-image: none !important;
+    box-shadow: none !important;
+    border: none !important;
+    text-shadow: none !important;
+    color: #fff !important;
+    background: #f04c91 !important;
+    text-transform: uppercase !important;
+}
+// fin dashboard------------------------------------------
+
 /* fin d'ajustage du front admin login*/
