--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -91,6 +91,16 @@ a.button, a:link.button, a:visited.button, input[type=submit], input[type=button
     letter-spacing: 5px !important;
     text-transform: uppercase !important;
 }
+body.logged_out .flash {
+    box-shadow: none;
+    text-shadow: none !important;
+    background: none;
+    color: #666;
+    font-weight: bold;
+    line-height: 1.0em;
+    padding: 0;
+    margin-bottom: 8px;
+}
 // fin login admin-----------------------------
 //dashboard------------------------------------------
 #title_bar {
@@ -205,7 +215,7 @@ form input[type=text], form input[type=password], form input[type=password]:acti
     border: none !important; 
     border-radius: 0 !important;
     font-size: 15px !important;
-    color: #fff !important;
+//    color: #fff !important;
     background: rgba(255, 249, 249, 0.49) !important;
 }
 
