--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,7 +109,7 @@
 
           <%= form_tag vehicules_path, :method => 'get' do %>
           <div id="cform">
-            <%= text_field_tag :search, params[:search], placeholder:"2744532 WWT", required: true, id:"kemail", class:" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" %>
+            <%= text_field_tag :search, params[:search], placeholder:"2744 WWT", required: true, id:"kemail", class:" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" %>
             <input type="submit" id="submit" class="submitBnt" value="Send">
           </div>
           <% end %>
